# gst-plugin-oamd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: PrepareReferencePlayerPlugins.cmake
src/: glib_compat.c  oamd_serializer.cpp  oamd_serializer_api.h  oamdcapsfeature.c  oamdcapsfeature.h  oamdserialize.c  oamdserialize.h  plugin.c
